--- a/React/template/template.html
+++ b/React/template/template.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <div id="test"></div>
-<script type="text/javascript" src="../js/react.development.js"></script>
-<script type="text/javascript" src="../js/react-dom.development.js"></script>
-<script type="text/javascript" src="../js/prop-types.js"></script>
-<script type="text/javascript" src="../js/babel.min.js"></script>
+<script type="text/javascript" src="../react-basic/js/react.development.js"></script>
+<script type="text/javascript" src="../react-basic/js/react-dom.development.js"></script>
+<script type="text/javascript" src="../react-basic/js/prop-types.js"></script>
+<script type="text/javascript" src="../react-basic/js/babel.min.js"></script>
 <script type="text/babel">
     
 </script>
