--- a/React/react-staging/03_src_TodoList 案例/component/Item/index.css
+++ b/React/react-staging/03_src_TodoList 案例/component/Item/index.css
@@ -1,14 +1,14 @@
 /*item*/
 li {
     list-style: none;
-    height: 36px;
-    line-height: 36px;
+    height: 40px;
+    line-height: 40px;
     padding: 0 5px;
     border-bottom: 1px solid #ddd;
 }
 
 li label {
-    float: left;
+    /* float: left; */
     cursor: pointer;
 }
 
